# biene

./: .env  .gitignore  Dockerfile  Hinweis für KingKaos  ProjectDraft.md  README.md  build.txt  db_biene.sql  diesel.toml  docker-compose.yml  empty_struk.txt  package-lock.json  package.json  vite.config.ts
bee_back/: Dockerfile  manage.py  requirements.txt
bee_back/bee_back/: asgi.py  settings.py  urls.py  wsgi.py
biene/: package-lock.json  package.json
biene/src-tauri/: Cargo.toml  tauri.conf.json
cli/: Cargo.toml
cli/database/: Cargo.toml
cli/feeding/: Cargo.toml
cli/treatment/: Cargo.toml
database/: Cargo.toml  create_table.sql  fill_table.sql
database/src/: database.rs  database_mod.rs  main.rs  mod.rs
database/tests/: cli.rs
feeding/: Cargo.toml  mod.rs
feeding/src/: feeding.rs  feeding_mod.rs  main.rs
queen/: Cargo.toml
queen/src/: main.rs
sql/: 1_schema.sql  2_table.sql
src/: App.vue  main.less  main.ts  router.js  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  main.rs
src-tauri/src/communication/: models.rs  structs.rs
src-tauri/src/database/: handler.rs  mod.rs  structs.rs
src-tauri/src/diesel/: models.rs  schema.rs
src-tauri/src/frontend/: builder.rs  commands.rs  mod.rs  structs.rs
src-tauri/src/migrations/2023-07-06-204005_durchsicht/: down.sql  up.sql
src-tauri/src/util/: mod.rs  store.rs  structs.rs
src/components/: Greet.vue  ReviewView.vue  SettingsView.vue
src/core/: Button.vue  Configuration.vue  Icon.vue  Input.vue
src/store/: index.ts  (+4 more)
treatment/: Cargo.toml
(+19 files in other folders)
